--- a/website/index.html
+++ b/website/index.html
@@ -87,28 +87,28 @@
     <div class="timeline">
         <div class="timeline-container">
             <div class="timeline-item">
-                <img src=".\templates\cleaner.webp" alt="Cleaning">
+                <img src=".\templates\cleaner.webp" alt="lentil Cleaning machine">
                 <div class="timeline-content">
                     <h2>Intake & Cleaning</h2>
                     <p>Input from cold storage or silos and removing impurities, dust, and foreign materials.</p>
                 </div>
             </div>
             <div class="timeline-item">
-                <img src=".\templates\seive.jpg" alt="Sorting">
+                <img src=".\templates\seive.jpg" alt="lentil Sorting machine">
                 <div class="timeline-content">
                     <h2>Sorting</h2>
                     <p>Grading and categorizing based on size and quality.</p>
                 </div>
             </div>
 			<div class="timeline-item">
-                <img src=".\templates\hulling.jpg" alt="Dehusking">
+                <img src=".\templates\hulling.jpg" alt="lentils Hulling machine">
                 <div class="timeline-content">
                     <h2>Drying & Dehusking</h2>
                     <p>Lentils undergo hulling and coated with oil and is heated in drier and coated with water and sent to storage rooms.Ad finally emoving the outer husk for improved quality.</p>
                 </div>
             </div>
             <div class="timeline-item">
-                <img src=".\templates\drier.avif" alt="Polishing">
+                <img src=".\templates\drier.avif" alt="Lentils Polishing machine">
                 <div class="timeline-content">
                     <h2>Polishing & Splitting</h2>
                     <p>Enhancing the final appearance of lentils.Lentils are also split into half according to the requirement</p>
@@ -124,8 +124,6 @@
         </div>
     </div>
 	</section>
-
-
 
 	<section id="products" class="products">
 		<div class="title">
