--- a/website/index.html
+++ b/website/index.html
@@ -55,14 +55,14 @@
                     <p>Ensures products stay fresh & long-lasting.</p>
                 </div>
                 <div class="offering-card">
-                    <strong>Eco-Friendly Packaging</strong>
-                    <p>Sustainable & safe materials.</p>
+                    <strong>Quality Imports</strong>
+                    <p>We import lentils from Australia and Canada and process it.</p>
                 </div>
                 <div class="offering-card">
                     <strong>Efficient Logistics</strong>
                     <p>Seamless delivery across regions.</p>
                 </div>
-				<div class="offering-card">
+		<div class="offering-card">
                     <strong>Variety</strong>
                     <p>We offer variety of products.</p>
                 </div>
